fix(about-page): remove image overlap on smaller viewports (#3450)
fixes #3417

--- a/web/src/components/pages/about/playbook.css
+++ b/web/src/components/pages/about/playbook.css
@@ -133,17 +133,6 @@
             }
         }
 
-        .record-quality-content {
-            display: grid;
-            grid-template-columns: 49% 48%;
-            grid-template-rows: auto;
-            grid-column-gap: 3%;
-
-            img {
-                justify-self: end;
-            }
-        }
-
         &.active {
             display: block;
         }
